--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "homepage": "http://ionicframework.com/",
   "private": true,
   "scripts": {
+    "clean": "ionic-app-scripts clean",
+    "build": "ionic-app-scripts build",
     "ionic:build": "ionic-app-scripts build",
     "ionic:serve": "ionic-app-scripts serve"
   },
@@ -17,24 +19,25 @@
     "@angular/platform-browser": "2.2.1",
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/platform-server": "2.2.1",
-    "@ionic/storage": "1.1.6",
-    "ionic-angular": "2.0.0-rc.4",
+    "@ionic/storage": "1.1.7",
+    "ionic-angular": "2.0.0-rc.5",
     "ionic-native": "2.2.11",
     "ionicons": "3.0.0",
     "rxjs": "5.0.0-beta.12",
-    "zone.js": "0.6.26"
+    "zone.js": "0.6.26",
+    "sw-toolbox": "3.4.0"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "0.0.47",
-    "typescript": "2.0.9"
+    "@ionic/app-scripts": "1.0.0",
+    "typescript": "~2.1.5"
   },
   "cordovaPlugins": [
     "cordova-plugin-whitelist",
     "cordova-plugin-console",
     "cordova-plugin-statusbar",
+    "cordova-plugin-splashscreen",
     "ionic-plugin-keyboard",
-    "cordova-plugin-device",
-    "cordova-plugin-splashscreen"
+    "cordova-plugin-device"
   ],
   "cordovaPlatforms": [],
   "description": "SmartCircle: An Ionic project"
